languages/montiarc-fe/src/test/resources/contextconditions/invalid/LowerCaseEnumeration.cd
package contextconditions.invalid;

classdiagram LowerCaseEnumeration {
  enum lowerCaseEnumeration {A, B, C;} // lower case name
}